--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "pokemon",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://olivermirimu.github.io/pokemon/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve --mode development",
     "clean": "rm -rf ./dist",
     "prebuild": "npm run clean",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -34,5 +37,6 @@
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
-  }
+  },
+  "devDependencies": {}
 }
