updating deploy script and scroll to top on updated list on all pokemon

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prebuild": "npm run clean",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "firebase deploy"
   },
   "keywords": [],
   "author": "",
