--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.4.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -38,5 +39,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "crypto-browserify": "^3.12.0"
+  }
 }
